--- a/mbub.html
+++ b/mbub.html
@@ -1,1 +1,73 @@
+<!DOCTYPE html>
+<html lang="id">
+<head>
+  <meta charset="UTF-8">
+  <title>pacarku</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #ffe6f0;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+    header {
+      background: #ff4d6d;
+      color: white;
+      padding: 20px;
+    }
+    h1 {
+      margin: 0;
+    }
+    .foto {
+      margin: 20px;
+    }
+    .foto img {
+      width: 200px;
+      height: 200px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 5px solid #ff4d6d;
+    }
+    .bio {
+      background: white;
+      margin: 0 auto;
+      max-width: 500px;
+      padding: 20px;
+      border-radius: 15px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    }
+    .bio h2 {
+      color: #ff4d6d;
+    }
+    footer {
+      margin-top: 20px;
+      padding: 10px;
+      background: #ff4d6d;
+      color: white;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>Tentang mbubku 💕</h1>
+  </header>
 
+  <div class="foto">
+    <!-- Ganti link gambar dengan foto pacar kamu -->
+    <img src="mbub.jpeg" alt="Foto Pacar">
+  </div>
+
+  <div class="bio">
+    <h2>Nama: kayla aprilia ahmadita</h2>
+    <p>Tanggal Lahir: 22 april 2009</p>
+    <p>Hobi: tidur, nyubit, dan scroll tiktok</p>
+    <p><em>"Kamu adalah alasan aku tersenyum setiap hari."</em></p>
+  </div>
+
+  <footer>
+    Dibuat dengan ❤️ oleh Aku untuk kamu
+    <br> <button onclick="index.html">KEMBALI</button>
+  </footer>
+</body>
+</html>
